--- a/package.json
+++ b/package.json
@@ -44,5 +44,8 @@
     "typescript": "5.1.3",
     "usehooks-ts": "^2.9.1",
     "zustand": "^4.4.7"
+  },
+  "devDependencies": {
+    "encoding": "^0.1.13"
   }
 }
